Move command to scheduler task

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "reelworx/rx-seminars",
+	"name": "reelworx/wpdirectmailreturn",
 	"description": "Versatile seminar manager. Lets users search and register for seminars. Can optionally plugin into the rx_shop extension.",
 	"version": "1.0.0",
 	"type": "typo3-cms-extension",
@@ -15,7 +15,7 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"Reelworx\\RxSeminars\\": "Classes/"
+			"Reelworx\\WpDirectmailreturn\\": "Classes/"
 		}
 	}
 }
