--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,14 @@
 {
 	"name": "reelworx/wpdirectmailreturn",
 	"description": "Versatile seminar manager. Lets users search and register for seminars. Can optionally plugin into the rx_shop extension.",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"type": "typo3-cms-extension",
 	"authors": [
+		{
+			"name": "WEBprofil - Gernot Ploiner e.U.",
+			"role": "Developer",
+			"homepage": "http://www.webprofil.at/"
+		},
 		{
 			"name": "Reelworx GmbH",
 			"role": "Developer",
@@ -11,7 +16,7 @@
 		}
 	],
 	"require": {
-		"typo3/cms-core": "~7.6"
+		"typo3/cms-core": "^7.6 || ^8.7"
 	},
 	"autoload": {
 		"psr-4": {
