--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -4,10 +4,10 @@ services:
     autoconfigure: true
     public: true
 
-  Reelworx\WpDirectmailreturn\:
+  WEBprofil\WpDirectmailreturn\:
     resource: '../Classes/*'
 
-  Reelworx\WpDirectmailreturn\Command\AnalyzeMailCommand:
+  WEBprofil\WpDirectmailreturn\Command\AnalyzeMailCommand:
     tags:
       - name: 'console.command'
         command: 'wpdirectmailreturn:analyzemail'
