[TASK] set version to 2.2.0 in docu ans cfg, and removed in composer.json

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,9 +1,9 @@
 [general]
 
 project = WP Directmail return Anaylze
-version = 2.1
-release = 2.1.0
-t3author = Gernott Ploiner
+version = 2.2
+release = 2.2.0
+t3author = Gernot Ploiner
 copyright = 2017-2020
 
 [html_theme_options]
