--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 	],
 	"license": "GPL-2.0-or-later",
 	"require": {
-		"typo3/cms-core": "^7.6 || ^8.7 || ^9.5",
+		"typo3/cms-core": "^7.6 || ^8.7 || ^9.5 || ^10.4",
 		"ext-imap": "*"
 	},
 	"replace": {
