--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,6 +1,6 @@
 [general]
 
-project = WP Directmail return Anaylze
+project = WP Directmail return Analyze
 version = 2.2
 release = 2.2.0
 t3author = Gernot Ploiner
